--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,27 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name="androidcompanion.notifications.NotificationService"
+        <activity
+            android:name="androidcompanion.device.DeviceListingActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="androidcompanion.main.MainActivity" />
+
+        <activity android:name="androidcompanion.device.addDeviceToListActivity"/>
+
+        <service
+            android:name="androidcompanion.notifications.NotificationService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
-
             <intent-filter>
-
                 <action android:name="android.service.notification.NotificationListenerService" />
-
             </intent-filter>
-
         </service>
+
     </application>
 
 </manifest>
