--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,16 +21,17 @@
             android:name="androidcompanion.main.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="androidcompanion.device.DeviceListingActivity"
             android:label="@string/app_name"
-            android:parentActivityName="androidcompanion.main.MainActivity" />
+            android:parentActivityName="androidcompanion.main.MainActivity">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name="androidcompanion.device.addDeviceToListActivity" />
 
         <service
@@ -42,7 +43,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name="androidcompanion.device.ReadQRCodeActivity"></activity>
+        <activity android:name="androidcompanion.device.ReadQRCodeActivity" android:parentActivityName="androidcompanion.device.DeviceListingActivity"></activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
