--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="androidcompanion.gui.Managment"
+            android:name="androidcompanion.device.DeviceListingActivity"
             android:label="@string/title_activity_managment"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
