--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,8 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-22
     - sys-img-armeabi-v7a-android-17
-
+  before_install:
+    - chmod +x gradlew
   before_script:
     # Create and start emulator
     - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
