--- a/.travis.yml
+++ b/.travis.yml
@@ -19,5 +19,6 @@ android:
     - tools # to get the new `repository-11.xml`
     - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
     - platform-tools
+    - sys-img-armeabi-v7a-android-22
     - build-tools-22.0.1
     - android-22
