--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ jdk: oraclejdk8
 before_install:
   - chmod +x gradlew
 
+# Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -16,9 +17,12 @@ script:
 
 android:
   components:
-    - tools # to get the new `repository-11.xml`
-    - tools # see https://github.com/travis-ci/travis-ci/issues/6040#issuecomment-219367943)
+    - tools
     - platform-tools
-    - sys-img-armeabi-v7a-android-22
-    - build-tools-22.0.1
-    - android-22
+    - tools
+    - build-tools-25.0.1
+    - android-25
+    - extra-android-m2repository
+    - extra-google-m2repository
+    - extra-android-supportsys
+    - sys-img-armeabi-v7a-android-25
