--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a --skin 480x800
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -19,10 +19,7 @@ android:
   components:
     - tools
     - platform-tools
-    - tools
     - build-tools-25.0.1
     - android-25
     - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-android-supportsys
     - sys-img-armeabi-v7a-android-25
