--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,11 @@ before_script:
 
 script:
   - ./gradlew clean build connectedCheck
+  
+licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 android:
   components:
