--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,6 @@ before_script:
 
 script:
   - ./gradlew clean build connectedCheck
-  
-licenses:
-    - 'android-sdk-preview-license-.+'
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
 
 android:
   components:
@@ -28,3 +23,7 @@ android:
     - android-25
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-25
+
+install:
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout;1.0.2"
+  - echo yes | sdkmanager "extras;m2repository;com;android;support;constraint;constraint-layout-solver;1.0.2"
