--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,10 @@ android:
     - build-tools-25.0.2
     - android-25
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-25
+    - sys-img-armeabi-v7a-android-25$
+  licenses:
+    - android-sdk-license-.+
+    - '.+'
 
 install:
   # List and delete unnecessary components to free space
