--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
+    com.android.ddmlib.DdmPreferences.setTimeOut(600000)
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
