--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         <activity android:name="androidcompanion.device.ReadQRCodeActivity" android:parentActivityName="androidcompanion.device.DeviceListingActivity"></activity>
 
         <service
-            android:name="androidcompanion.notifications.NotificationService"
+            android:name="androidcompanion.notifications.NotifService"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
             <intent-filter>
