--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a --skin 480x800
+  - echo no | android create avd --force -n test -t android-21 --abi google_apis/armeabi-v7a --skin 480x800
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -24,7 +24,7 @@ android:
     - build-tools-25.0.2
     - android-25
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-25$
+    - sys-img-armeabi-v7a-addon-google_apis-google-21
   licenses:
     - android-sdk-license-.+
     - '.+'
