--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,12 @@ jdk: oraclejdk8
 env:
   global:
     - ADB_INSTALL_TIMEOUT=8 # minutes (2 minutes by default)
+    - ANDROID_ABI=google_apis/armeabi-v7a
+    - ANDROID_TAG=google_apis
 
 # Emulator Management: Create, Start and Wait
 before_script:
-  - echo no | android create avd --force -n test -t android-21 --abi google_apis/armeabi-v7a --skin 480x800
+  - echo no | android create avd --force -n test -t "android-23" --abi $ANDROID_ABI --tag $ANDROID_TAG
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
@@ -24,7 +26,7 @@ android:
     - build-tools-25.0.2
     - android-25
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-addon-google_apis-google-21
+    - sys-img-armeabi-v7a-android-25$
   licenses:
     - android-sdk-license-.+
     - '.+'
