--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,6 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE"/>
 
-
-
     <application
         android:allowBackup="true"
         android:name="androidcompanion.main.MyApp"
@@ -42,6 +40,12 @@
             <intent-filter>
                 <action android:name="android.service.notification.NotificationListenerService" />
             </intent-filter>
+        </service>
+
+        <service
+            android:name="androidcompanion.notifications.BatteryStateJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:exported="true">
         </service>
 
     </application>
