Fixed crash issue in default device settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".ConfigurationActivity"></activity>
+        <activity android:name="androidcompanion.device.ConfigurationActivity"></activity>
     </application>
 
 </manifest>
